--- a/index.html
+++ b/index.html
@@ -23,22 +23,70 @@
         <a class="navbar-brand" href="index.html">
           <img id="logo" src="img/hdcagency_logo.svg" alt="hDC Agency"> hDC Agency
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="bi bi-list"></i>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navbar-links" class="collapse navbar-collapse justify-content-end">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" id="home-menu" href="#">Home</a>
-            <a class="nav-item nav-link" id="about-menu" href="#">A agência</a>
-            <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
-            <a class="nav-item nav-link" id="team-menu" href="#">Time</a>
-            <a class="nav-item nav-link" id="portfolio-menu" href="#">Projetos</a>
-            <a class="nav-item nav-link" id="contact-menu" href="#">Contato</a>
-          </div>
+          <ul class="navbar-nav px-3">
+            <li class="nav-item"><a class="nav-link" id="home-menu" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" id="about-menu" href="#">A agência</a></li>
+            <li class="nav-item"><a class="nav-link" id="services-menu" href="#">Serviços</a></li>
+            <li class="nav-item"><a class="nav-link" id="team-menu" href="#">Time</a></li>
+            <li class="nav-item"><a class="nav-link" id="portfolio-menu" href="#">Projetos</a></li>
+            <li class="nav-item"><a class="nav-link" id="contact-menu" href="#">Contato</a></li>
+          </ul>
         </div>
       </nav>
     </div>
   </header>
+
+  <main>
+    <div class="container-fluid">
+      <!-- slider -->
+      <div id="mainSlider" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#mainSlider" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#mainSlider" data-bs-slide-to="1"></li>
+          <li data-bs-target="#mainSlider" data-bs-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/banner1.png" alt="Projetos de e-commerce">
+            <div class="carousel-caption d-md-block">
+              <h2>Quer criar um e-commerce?</h2>
+              <p>Conte conosco, temos mais de 30 lojas no portfólio.</p>
+              <a href="#" class="main-btn">Ver portfólio</a>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/banner2.png" alt="Engenharia de software">
+            <div class="carousel-caption d-md-block">
+              <h2>Está querendo tirar o projeto do papel?</h2>
+              <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
+              <a href="#" class="main-btn">Entre em contato</a>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/banner3.png" alt="Manutenção em software">
+            <div class="carousel-caption d-md-block">
+              <h2>Está buscando manutenção no seu software?</h2>
+              <p>A hDC conta com engenheiros altamente qualificados para resolver seu problema.</p>
+              <a href="#" class="main-btn">Entre em contato</a>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#mainSlider" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#mainSlider" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+      </div>
+    </div>
+  </main>
 
   <!-- JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
