--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
   <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css" type="text/css"  media="all">
-  <!-- Progress Bar -->
-  <script src="js/progressbar.min.js"></script>
-  <!-- Parallax -->
-  <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 </head>
 <body>
 	<header>
@@ -119,19 +115,19 @@
             </div>
 
             <div class="col-md-4 service-box">
-              <i class="bi bi-phone"></i>
+              <i class="bi bi-phone-fill"></i>
               <h4>Aplicativos Nativos</h4>
               <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos.</p>
             </div>
 
             <div class="col-md-4 service-box">
-              <i class="bi bi-cart"></i>
+              <i class="bi bi-cart-fill"></i>
               <h4>E-commerces</h4>
               <p>Temos uma plataforma própria de e-commerce que se adapta a qualquer regra de negócio (B2C e B2B).</p>
             </div>
 
             <div class="col-md-4 service-box">
-              <i class="bi bi-brush"></i>
+              <i class="bi bi-palette-fill"></i>
               <h4>Design Criativo</h4>
               <p>Nossos designers são especializados em UI/UX e também possuem vasta experiência no mercado de software.</p>
             </div>
@@ -143,7 +139,7 @@
             </div>
 
             <div class="col-md-4 service-box">
-              <i class="bi bi-hand-thumbs-up"></i>
+              <i class="bi bi-hand-thumbs-up-fill"></i>
               <h4>Suporte 24/7</h4>
               <p>Você sempre terá alguem da equipe disponível para suporte, em diferentes plataformas. (chat, email, skype)</p>
             </div>
@@ -157,11 +153,41 @@
           </div>
         </div>
       </div>
+      <!-- Dados da empresa -->
+      <div id="data-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleA"></div>
+              <p>Projetos entregues</p>
+            </div>
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleB"></div>
+              <p>Clientes Felizes</p>
+            </div>
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleC"></div>
+              <p>Colaboradores</p>
+            </div>  
+            <div class="col-md-3 col-xs-6 circle-box">
+              <div id="circleD"></div>
+              <p>Cafézinhos</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Time -->
     </div>
   </main>
 
-  <!-- JavaScript -->
+  <!-- JavaScript Jquery -->
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
+  <script src="js/progressbar.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
