--- a/index.html
+++ b/index.html
@@ -227,6 +227,22 @@
           </div>
         </div>
       </div>
+      <!-- Trabalhe conosco -->
+      <div id="apply-area">
+        <div class="container-fluid">
+          <div class="row">
+            <div id="company-img" class="col-md-6 apply-box"></div>
+            <div id="pattern-img" class="col-md-6 apply-box">
+              <h4>Gosta de desafios?</h4>
+              <p>Temos várias posições abertas, entre elas: Software Engineer, UI/UX Designer, Project Manager e mais.</p>
+              <p>Clique no botão abaixo e confira os benefícios e as posições em aberto.</p>
+              <p>Aqui você terá a chance de trabalhar com as melhores tecnologias e os profissionais mais capacitados.</p>
+              <a href="#" class="main-btn" id="apply-btn">Saiba Mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Portfólio -->
     </div>
   </main>
 
