--- a/index.html
+++ b/index.html
@@ -243,6 +243,40 @@
         </div>
       </div>
       <!-- Portfólio -->
+      <div id="portfolio-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="main-title">Conheça nossos projetos</h3>
+            </div>
+            <div id="filter-btn-box" class="col-12">
+              <button class="main-btn filter-btn active" id="all-btn" onclick="MyFunc('0')">Todos</button>
+              <button class="main-btn filter-btn" id="dev=btn" onclick="MyFunc('1')">Desenvolvimento</button>
+              <button class="main-btn filter-btn" id="dsg-btn" onclick="MyFunc('2')">Design</button>
+              <button class="main-btn filter-btn" id="seo-btn" onclick="MyFunc('3')">SEO</button>
+            </div>
+            <div class="col-md-4 project-box dev">
+              <img class="img-fluid" src="img/proj1.jpg" alt="Projeto 1">
+            </div>
+            <div class="col-md-4 project-box dsg">
+              <img class="img-fluid" src="img/proj2.jpg" alt="Projeto 2">
+            </div>
+            <div class="col-md-4 project-box seo">
+              <img class="img-fluid" src="img/proj3.jpg" alt="Projeto 3">
+            </div>
+            <div class="col-md-4 project-box dev">
+              <img class="img-fluid" src="img/proj4.jpg" alt="Projeto 4">
+            </div>
+            <div class="col-md-4 project-box dsg">
+              <img class="img-fluid" src="img/proj5.jpg" alt="Projeto 5">
+            </div>
+            <div class="col-md-4 project-box seo">
+              <img class="img-fluid" src="img/proj6.jpg" alt="Projeto 6">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Newsletter -->
     </div>
   </main>
 
