--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         </ol>
 
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="img/banner1.png" alt="Projetos de e-commerce">
+          <div class="carousel-item active b1">
             <div class="carousel-caption d-md-block">
               <h2>Quer criar um e-commerce?</h2>
               <p>Conte conosco, temos mais de 30 lojas no portfólio.</p>
@@ -56,8 +55,7 @@
             </div>
           </div>
 
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/banner2.png" alt="Engenharia de software">
+          <div class="carousel-item b2">
             <div class="carousel-caption d-md-block">
               <h2>Está querendo tirar o projeto do papel?</h2>
               <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
@@ -65,8 +63,7 @@
             </div>
           </div>
 
-          <div class="carousel-item">
-            <img class="d-block w-100" src="img/banner3.png" alt="Manutenção em software">
+          <div class="carousel-item b3">
             <div class="carousel-caption d-md-block">
               <h2>Está buscando manutenção no seu software?</h2>
               <p>A hDC conta com engenheiros altamente qualificados para resolver seu problema.</p>
