Add Anchors Links

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div id="navbar-links" class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav px-3">
             <li class="nav-item"><a class="nav-link" id="home-menu" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" id="about-menu" href="#">A agência</a></li>
-            <li class="nav-item"><a class="nav-link" id="services-menu" href="#">Serviços</a></li>
-            <li class="nav-item"><a class="nav-link" id="team-menu" href="#">Time</a></li>
-            <li class="nav-item"><a class="nav-link" id="portfolio-menu" href="#">Projetos</a></li>
-            <li class="nav-item"><a class="nav-link" id="contact-menu" href="#">Contato</a></li>
+            <li class="nav-item"><a class="nav-link" id="about-menu" href="#about-area">A agência</a></li>
+            <li class="nav-item"><a class="nav-link" id="services-menu" href="#services-area">Serviços</a></li>
+            <li class="nav-item"><a class="nav-link" id="team-menu" href="#team-area">Time</a></li>
+            <li class="nav-item"><a class="nav-link" id="portfolio-menu" href="#portfolio-area">Projetos</a></li>
+            <li class="nav-item"><a class="nav-link" id="contact-menu" href="#contact-area">Contato</a></li>
           </ul>
         </div>
       </nav>
@@ -51,7 +51,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Quer criar um e-commerce?</h2>
               <p>Conte conosco, temos mais de 30 lojas no portfólio.</p>
-              <a href="#" class="main-btn">Ver portfólio</a>
+              <a href="#portfolio-area" class="main-btn">Ver portfólio</a>
             </div>
           </div>
 
@@ -59,7 +59,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Está querendo tirar o projeto do papel?</h2>
               <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
-              <a href="#" class="main-btn">Entre em contato</a>
+              <a href="#contact-area" class="main-btn">Entre em contato</a>
             </div>
           </div>
 
@@ -67,7 +67,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Está buscando manutenção no seu software?</h2>
               <p>A hDC conta com engenheiros altamente qualificados para resolver seu problema.</p>
-              <a href="#" class="main-btn">Entre em contato</a>
+              <a href="#contact-area" class="main-btn">Entre em contato</a>
             </div>
           </div>
         </div>
