--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </button>
         <div id="navbar-links" class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav px-3">
-            <li class="nav-item"><a class="nav-link" id="home-menu" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" id="about-menu" href="#about-area">A agência</a></li>
-            <li class="nav-item"><a class="nav-link" id="services-menu" href="#services-area">Serviços</a></li>
-            <li class="nav-item"><a class="nav-link" id="team-menu" href="#team-area">Time</a></li>
-            <li class="nav-item"><a class="nav-link" id="portfolio-menu" href="#portfolio-area">Projetos</a></li>
-            <li class="nav-item"><a class="nav-link" id="contact-menu" href="#contact-area">Contato</a></li>
+            <a class="nav-link" id="home-menu" href="#"><li class="nav-item" data-bs-target="#navbar-links" data-bs-toggle="collapse">Home</li></a>
+            <a class="nav-link" id="about-menu" href="#about-area"><li class="nav-item" data-bs-target="#navbar-links" data-bs-toggle="collapse">A agência</li></a>
+            <a class="nav-link" id="services-menu" href="#services-area"><li class="nav-item" data-bs-target="#navbar-links" data-bs-toggle="collapse">Serviços</li></a>
+            <a class="nav-link" id="team-menu" href="#team-area"><li class="nav-item" data-bs-target="#navbar-links" data-bs-toggle="collapse">Time</li></a>
+            <a class="nav-link" id="portfolio-menu" href="#portfolio-area"><li class="nav-item" data-bs-target="#navbar-links" data-bs-toggle="collapse">Projetos</li></a>
+            <a class="nav-link" id="contact-menu" href="#contact-area"><li class="nav-item" data-bs-target="#navbar-links" data-bs-toggle="collapse">Contato</li></a>
           </ul>
         </div>
       </nav>
